# cashless-gala

./: .gitignore  .gitlab-ci.yml  Client.py  IHM.py  ItemModel.json  QItemModel.py  QItemTree.py  QNFC.py  QTree.py  QUtils.py  Test.py  main.py  requirements-min.txt  requirements.txt
Articles/: Boissons.txt  Menus.txt  Nourriture.txt
client/: .gitignore  Atoms.py  Client.py  Console.py  Euro.py  GUI.py  IHM.py  QAtoms.py  QCounterTab.py  QDataManager.py  QItemModel.py  QItemTree.py  QManager.py  QNFC.py  QNFCManager.py  QRefillerTab.py  QTree.py  QUIManager.py  QUtils.py  README.md  cashless-install-rpi  convert.py  gmc.py  install_script_client_lite  main.py  requirements-min-rpi.txt  requirements.txt  xinitrc
client/Articles/: Ressources.txt
client/scripts/: generate_from_proto.cmd  generate_from_proto.sh  gmc
client/src/atoms/: Atoms.py  QAtomWidgets.py  QAtoms.py
client/src/debug/: Console.py
client/src/euro/: Euro.py
client/src/gui/: GUI.py  QCounterTab.py  QNFCInfo.py  QRefillerTab.py  QUtils.py
client/src/gui/widgets/: QButtons.py  QDialogs.py  QForms.py  QInputs.py  QLabels.py
client/src/managers/: Client.py  QDataManager.py  QNFC.py  QNFCManager.py  QUIManager.py
client/src/trees/: QItemModel.py  QItemTree.py  QTree.py
client/src/utils/: Euro.py  logs.py
client/src/widgets/: QUtils.py
client/tests/: stress_tests.py
protos/: com.proto
server/: .gitignore  2019.json  README.md  build.py  db_import_schema.json  manage.py  protoc.py  pyproject.toml  requirements.txt  service.py
server/cashless_server/: __init__.py  manage.py  models.py  pbutils.py  server.py  settings.py  tests.py
server/server/: models.py  pbutils.py  server.py  settings.py  tests.py
server/tests/: __init__.py  test_balance.py  test_counter_list.py  test_history.py  test_refilling.py
(+5 files in other folders)
