[tool.poetry]
name = "cashless_server"
version = "0.1.0"
description = "Server for centralizing cashless system"
authors = ["Sli <antoine@bartuccio.fr>"]
license = "GPL-3.0-only"

[tool.poetry.scripts]
manage = 'cashless_server.manage:main'

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.41.0"
grpcio-tools = "^1.41.0"
grpcio-reflection = "^1.41.0"
click = "^8.0.3"
jsonschema = "^4.1.2"
python-slugify = "^5.0.2"
SQLAlchemy = "^1.4.26"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
