[tool.poetry]
name = "cashless_server"
version = "0.1.1"
description = "Server for centralizing cashless system"
authors = ["Sli <antoine@bartuccio.fr>"]
license = "GPL-3.0-only"
include = [
    {path = "cashless_server/com.proto"},
    {path = "cashless_server/com_pb2.py"},
    {path = "cashless_server/com_pb2_grpc.py"},
    {path = "cashless_server/db_import_schema.json"}
]

[tool.poetry.build]
script = "build.py"

[tool.poetry.scripts]
cash = 'cashless_server.manage:main'

[tool.poetry.dependencies]
python = "^3.8"
grpcio = "^1.41.0"
grpcio-tools = "^1.41.0"
grpcio-reflection = "^1.41.0"
click = "^8.0.3"
jsonschema = "^4.1.2"
python-slugify = "^5.0.2"
SQLAlchemy = "^1.4.26"

grpcio-testing = {version = "^1.41.0", optional= true }
pytest = {version = "^6.2.5", optional = true }
pytest-cov = {version = "^3.0.0", optional = true}

[tool.poetry.extras]
testing = ["pytest", "pytest-cov", "grpcio-testing"]

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0", "wheel", "setuptools", "grpcio-tools", "click"]
build-backend = "poetry.core.masonry.api"
